# project-is

./: CMakeLists.txt
src/: CMakeLists.txt  main.cc
src/business/: CMakeLists.txt  administrador.cc  administrador.h  alumno.cc  alumno.h  intercambio.cc  intercambio.h  lista.cc  lista.h  planConvalidacion.cc  planConvalidacion.h  profesor.cc  profesor.h  universidad.cc  universidad.h
src/business/gestores/: CMakeLists.txt  gestorAdministrador.cc  gestorAdministrador.h  gestorAlumno.cc  gestorAlumno.h  gestorProfesor.cc  gestorProfesor.h
src/data/: CMakeLists.txt  administadorData.h  administradorData.cc  administradorData.h  alumnoData.cc  alumnoData.h  intercambioData.cc  intercambioData.h  planConvalidacionData.cc  planConvalidacionData.h  profesorData.cc  profesorData.h
src/display/: CMakeLists.txt  main.cc  menuAdministrador.cc  menuAdministrador.h  menuAlumno.cc  menuAlumno.h  menuInicial.cc  menuProfesor.cc  menuProfesor.h
